--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  
+<h1>Heading 1</h1>
+<h2>Heading 2</h1>
+<h3>Heading 3</h3>
+<p>This is a paragraph</p>
+<p>This is a paragraph</p>
 </body>
 </html>
