--- a/costTable.html
+++ b/costTable.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Michael's website</title>
+<style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+
+}
+</style>
 </head>
 <body>
 
 <h1>Cost Table</h1>
-<table>
+<table style="width:50%">
   <tr>
     <th>Quote</th>
     <th>$1</th>
@@ -15,25 +22,25 @@
     <th>$31</th>
   </tr>
   <tr>
-    <th>Half day</th>
-    <th>$6</th>
-    <th></th>
-    <th>Four days</th>
-    <th>$41</th>
+    <td>Half day</td>
+    <td>$6</td>
+    <td></td>
+    <td>Four days</td>
+    <td>$41</td>
   </tr>
   <tr>
-    <th>One day</th>
-    <th>$11</th>
-    <th></th>
-    <th>Half year</th>
-    <th>$201</th>
+    <td>One day</td>
+    <td>$11</td>
+    <td></td>
+    <td>Half year</td>
+    <td>$201</td>
   </tr>
   <tr>
-    <th>Two days</th>
-    <th>$21</th>
-    <th></th>
-    <th>One year</th>
-    <th>$401</th>
+    <td>Two days</td>
+    <td>$21</td>
+    <td></td>
+    <td>One year</td>
+    <td>$401</td>
   </tr>
 </body>
 </html>
