--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
 </body>
 </html>
 <a href="toolList">Tool List</a>
-<a href="costTable.html">Cost Tablet</a>
+<a href="costTable.html">Cost Table</a>
