--- a/costTable.html
+++ b/costTable.html
@@ -8,6 +8,9 @@ table, th, td {
   border-collapse: collapse;
 
 }
+th, td {
+  border-style: ridge;
+}
 </style>
 </head>
 <body>
@@ -22,25 +25,25 @@ table, th, td {
     <th>$31</th>
   </tr>
   <tr>
-    <td>Half day</td>
-    <td>$6</td>
-    <td></td>
-    <td>Four days</td>
-    <td>$41</td>
+    <th>Half day</th>
+    <th>$6</th>
+    <th></th>
+    <th>Four days</th>
+    <th>$41</th>
   </tr>
   <tr>
-    <td>One day</td>
-    <td>$11</td>
-    <td></td>
-    <td>Half year</td>
-    <td>$201</td>
+    <th>One day</th>
+    <th>$11</th>
+    <th></th>
+    <th>Half year</th>
+    <th>$201</th>
   </tr>
   <tr>
-    <td>Two days</td>
-    <td>$21</td>
-    <td></td>
-    <td>One year</td>
-    <td>$401</td>
+    <th>Two days</th>
+    <th>$21</th>
+    <th></th>
+    <th>One year</th>
+    <th>$401</th>
   </tr>
 </body>
 </html>
