--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <body>
-  
-<h1>Heading 1</h1>
-<h2>Heading 2</h1>
-<h3>Heading 3</h3>
-<p>This is a paragraph</p>
-<p>This is a paragraph</p>
+<h1>Welcome to builders.com</h1>
+<p>I'm Bob the Builder, and I've been in the construction business for a long time. I've built everything from simple garden sheds to towering skyscrapers. If you need something built, I'm the man for the job.</p>
+<p>At Bob the Builder Construction, we pride ourselves on our commitment to quality and attention to detail. We know that when it comes to construction, every detail matters. That's why we take the time to listen to your needs and work closely with you to ensure that we deliver exactly what you're looking for.</p>
+<p>Whether you're building a new home or renovating an existing one, we've got the skills and experience to get the job done right. We specialize in a wide range of construction services, including carpentry, masonry, electrical work, plumbing, and more.</p>
+<p>But don't just take our word for it. Check out our portfolio to see some of the amazing projects we've completed for our clients over the years. We're confident that you'll be impressed with the quality of our work and our attention to detail.</p>
+<p>So if you're ready to get started on your next construction project, give us a call or fill out our contact form. We're always happy to answer any questions you may have and provide you with a free quote. Let's get building!</p>
 </body>
 </html>
-<a href="toolList">Tool List</a>
-<a href="costTable.html">Cost Table</a>
+<a href="toolList" style="text-align:center;">Tool List</a>
+<a href="costTable.html" style="text-align:center;">Cost Table</a>
+<p style="text-align:right;">Bob the Builder
+Professional Builder
+780-123-4567
+</p>
