--- a/index.html
+++ b/index.html
@@ -11,7 +11,4 @@
 </html>
 <a href="toolList" style="text-align:center;">Tool List</a>
 <a href="costTable.html" style="text-align:center;">Cost Table</a>
-<p style="text-align:right;">Bob the Builder
-Professional Builder
-780-123-4567
-</p>
+<p style="text-align:right;">Bob the Builder<br>Professional Builder<br>780-123-4567</p>
