--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 <br>
 <a href="costTable.html" style="text-align:center;">Cost Table</a>
 <br>
-<a href="underConstruction.html" style="text-align:center;">Cost Table</a>
+<a href="underConstruction.html" style="text-align:center;">About Bob the Builder</a>
 <p style="text-align:right;">Bob the Builder<br>Professional Builder<br>780-123-4567</p>
