--- a/underConstruction.html
+++ b/underConstruction.html
@@ -3,7 +3,6 @@
 <body>
 
 <h1>Oops, this page in under construction</h1>
-<a href="https://www.vecteezy.com/video/13553154-contractors-checking-the-construction-site-animation-contractor-discussing-the-construction-site-building-while-holding-the-blueprint-cartoon-in-4k-resolution">Contractors checking the construction site animation, Contractor discussing the construction site building while holding the blueprint, Cartoon in 4k resolution Stock Videos by Vecteezy</a>
-
+<img src="https://static.vecteezy.com/system/resources/thumbnails/013/553/154/original/contractors-checking-the-construction-site-animation-contractor-discussing-the-construction-site-building-while-holding-the-blueprint-cartoon-in-4k-resolution-free-video.jpg" alt=Construction cartoon">
 </body>
 </html>
