--- a/underConstruction.html
+++ b/underConstruction.html
@@ -3,6 +3,6 @@
 <body>
 
 <h1>Oops, this page in under construction</h1>
-<img src="https://static.vecteezy.com/system/resources/thumbnails/013/553/154/original/contractors-checking-the-construction-site-animation-contractor-discussing-the-construction-site-building-while-holding-the-blueprint-cartoon-in-4k-resolution-free-video.jpg" alt=Construction cartoon">
+<img src="https://static.vecteezy.com/system/resources/thumbnails/013/553/154/original/contractors-checking-the-construction-site-animation-contractor-discussing-the-construction-site-building-while-holding-the-blueprint-cartoon-in-4k-resolution-free-video.jpg" alt=Construction cartoon" width="216" height="384">
 </body>
 </html>
