--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+<style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+
+}
+th, td {
+  border-style: ridge;
+}
+</style>
 <body>
 <h1>Welcome to builders.com</h1>
 <p>I'm Bob the Builder, and I've been in the construction business for a long time. I've built everything from simple garden sheds to towering skyscrapers. If you need something built, I'm the man for the job.</p>
