--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ th, td {
 <br>
 <a href="costTable.html" style="text-align:center;">Cost Table</a>
 <br>
-<a href="underConstruction.html" style="text-align:center;">About Bob the Builder</a>
+<a href="underConstruction.html" style="text-align:center;"Portfolio</a>
 <p style="text-align:right;">Bob the Builder<br>Professional Builder<br>780-123-4567</p>
 </body
 <br>
