--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ th, td {
 }
 </style>
 <body>
+  
 <h1>Welcome to builders.com</h1>
 <p>I'm Bob the Builder, and I've been in the construction business for a long time. I've built everything from simple garden sheds to towering skyscrapers. If you need something built, I'm the man for the job.</p>
 <p>At Bob the Builder Construction, we pride ourselves on our commitment to quality and attention to detail. We know that when it comes to construction, every detail matters. That's why we take the time to listen to your needs and work closely with you to ensure that we deliver exactly what you're looking for.</p>
@@ -21,9 +22,8 @@ th, td {
 <br>
 <a href="costTable.html" style="text-align:center;">Cost Table</a>
 <br>
-<a href="underConstruction.html" style="text-align:center;"Portfolio</a>
+<a> href="underConstruction.html" style="text-align:center;"Portfolio</a>
 <p style="text-align:right;">Bob the Builder<br>Professional Builder<br>780-123-4567</p>
-</body
 <br>
 <h2>Cost Table</h2>
 <p>Here's how much we charge</p>
@@ -57,5 +57,6 @@ th, td {
     <th>$401</th>
   </tr>
 
+</body
 </html>
 
