--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@ th, td {
 <p>So if you're ready to get started on your next construction project, give us a call or fill out our contact form. We're always happy to answer any questions you may have and provide you with a free quote. Let's get building!</p>
 <a href="toolList" style="text-align:center;">Tool List</a>
 <br>
-<a> href="costTable.html" style="text-align:center;">Cost Table</a>
-<br>
-<a> href="underConstruction.html" style="text-align:center;"Portfolio</a>
+<a href="underConstruction.html" style="text-align:center;">Portfolio</a>
 <p style="text-align:right;">Bob the Builder<br>Professional Builder<br>780-123-4567</p>
 <br>
 <h2>Cost Table</h2>
