--- a/underConstruction.html
+++ b/underConstruction.html
@@ -3,8 +3,8 @@
 <body>
 
 <h1>Oops, this page in under construction</h1>
-<img src="constructionPicture">
-<img src="constructionPictureSmall">
+<img src="constructionPicture.jpg">
+<img src="constructionPictureSmall.jpg">
 <a href="https://www.vecteezy.com/video/13553154-contractors-checking-the-construction-site-animation-contractor-discussing-the-construction-site-building-while-holding-the-blueprint-cartoon-in-4k-resolution" style="text-align:center;">Source</a>
 
 </body>
