--- a/index.html
+++ b/index.html
@@ -18,43 +18,11 @@ th, td {
 <p>Whether you're building a new home or renovating an existing one, we've got the skills and experience to get the job done right. We specialize in a wide range of construction services, including carpentry, masonry, electrical work, plumbing, and more.</p>
 <p>But don't just take our word for it. Check out our portfolio to see some of the amazing projects we've completed for our clients over the years. We're confident that you'll be impressed with the quality of our work and our attention to detail.</p>
 <p>So if you're ready to get started on your next construction project, give us a call or fill out our contact form. We're always happy to answer any questions you may have and provide you with a free quote. Let's get building!</p>
-<a href="toolList" style="text-align:center;">Tool List</a>
+<a href="toolList">Tool List</a> &nbsp &nbsp &nbsp &nbsp
+<a href="underConstruction.html">Portfolio</a> &nbsp &nbsp &nbsp &nbsp
+<a href="costTable.html">How much we charge</a>
 <br>
-<a href="underConstruction.html" style="text-align:center;">Portfolio</a>
 <p style="text-align:right;">Bob the Builder<br>Professional Builder<br>780-123-4567</p>
-<br>
-<h2>Cost Table</h2>
-<p>Here's how much we charge</p>
-<table style="width:50%">
-  <tr>
-    <th>Quote</th>
-    <th>$1</th>
-    <th></th>
-    <th>Three days</th>
-    <th>$31</th>
-  </tr>
-  <tr>
-    <th>Half day</th>
-    <th>$6</th>
-    <th></th>
-    <th>Four days</th>
-    <th>$41</th>
-  </tr>
-  <tr>
-    <th>One day</th>
-    <th>$11</th>
-    <th></th>
-    <th>Half year</th>
-    <th>$201</th>
-  </tr>
-  <tr>
-    <th>Two days</th>
-    <th>$21</th>
-    <th></th>
-    <th>One year</th>
-    <th>$401</th>
-  </tr>
-
-</body
+</body>
 </html>
 
