--- a/underConstruction.html
+++ b/underConstruction.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
+<style>   
+    img, a, iframe {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+</style>
 <body>
 
-<h1>Oops, this page in under construction</h1>
-<img src="constructionPicture.jpg">
-<img src="constructionPictureSmall.jpg">
-<a href="https://www.vecteezy.com/video/13553154-contractors-checking-the-construction-site-animation-contractor-discussing-the-construction-site-building-while-holding-the-blueprint-cartoon-in-4k-resolution" style="text-align:center;">Source</a>
-
+<h1 style="text-align:center;">Oops, this page in under construction</h1>
+<img src="constructionPicture.jpg" width="80%" class="center">
+<a href="https://www.vecteezy.com/video/13553154-contractors-checking-the-construction-site-animation-contractor-discussing-the-construction-site-building-while-holding-the-blueprint-cartoon-in-4k-resolution" style="text-align:center">Source</a>
+<h3 style="text-align:center;">Heres something to watch while you wait</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gi3rVkM9bVc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
