--- a/costTable.html
+++ b/costTable.html
@@ -3,9 +3,11 @@
 <head>
 <title>Michael's website</title>
 <style>
-table, th, td {
-  border: 1px solid black;
+table, th, td, h2, p {
+  border: 1px solid lightblue;
   border-collapse: collapse;
+  background-color: darkorange;
+  color:lightblue;
 
 }
 th, td {
@@ -15,9 +17,9 @@ th, td {
 </head>
 <body>
 
-<h1>Cost Table</h1>
+<h2>Cost Table</h2>
 <p>Here's how much we charge</p>
-<table style="width:50%">
+<table style="width:50%;">
   <tr>
     <th>Quote</th>
     <th>$1</th>
