--- a/costTable.html
+++ b/costTable.html
@@ -4,10 +4,8 @@
 <title>Michael's website</title>
 <style>
 table, th, td, h2, p {
-  border: 1px solid lightblue;
+  border: 1px solid orange;
   border-collapse: collapse;
-  background-color: darkorange;
-  color:lightblue;
 
 }
 th, td {
