--- a/underConstruction.html
+++ b/underConstruction.html
@@ -12,7 +12,7 @@
 <h1 style="text-align:center;">Oops, this page in under construction</h1>
 <img src="constructionPicture.jpg" width="80%" class="center">
 <a href="https://www.vecteezy.com/video/13553154-contractors-checking-the-construction-site-animation-contractor-discussing-the-construction-site-building-while-holding-the-blueprint-cartoon-in-4k-resolution" style="text-align:center">Source</a>
-<h3 style="text-align:center;">Heres something to watch while you wait</h3>
+<h3 style="text-align:center;">Here's something to watch while you wait</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/gi3rVkM9bVc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
