--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ th, td {
   border-style: ridge;
 }
 </style>
-<body style="background-color:blue;>
+<body style="background-color:#fcd18b;>
   
 <h1>Welcome to builders.com</h1>
 <p>I'm Bob the Builder, and I've been in the construction business for a long time. I've built everything from simple garden sheds to towering skyscrapers. If you need something built, I'm the man for the job.</p>
