--- a/costTable.html
+++ b/costTable.html
@@ -13,7 +13,7 @@ th, td {
 }
 </style>
 </head>
-<body>
+<body style="background-color:#fcd18b">>
 
 <h2>Cost Table</h2>
 <p>Here's how much we charge</p>
