--- a/underConstruction.html
+++ b/underConstruction.html
@@ -7,7 +7,7 @@
         margin-right: auto;
       }
 </style>
-<body style="background-color:#fcd18b">>
+<body style="background-color:#fcd18b"; "background-image: url('constructionPicture.jpg');">
 
 <h1 style="text-align:center;">Oops, this page in under construction</h1>
 <img src="constructionPicture.jpg" width="80%" class="center">
